# Printer_Troubleshoot_AI

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  validate-config.sh  vitest.config.ts
frontend/: Dockerfile  package-lock.json  (+2 more)
zt411-troubleshooter-agent/: .env.example  CHANGELOG.md  Dockerfile  Makefile  pyproject.toml  pytest.ini
zt411-troubleshooter-agent/.github/workflows/: ci.yml
zt411-troubleshooter-agent/alembic/versions/: 001_initial_schema.py
zt411-troubleshooter-agent/configs/: data.yaml  eval.yaml  logging.yaml  model.yaml  train.yaml
zt411-troubleshooter-agent/configs/runtime/: base.yaml  cloud.yaml  offline.yaml
zt411-troubleshooter-agent/data/cache/: classifier.pkl
zt411-troubleshooter-agent/data/rag_corpus/: MANIFEST.md  chunks.jsonl  index.faiss
zt411-troubleshooter-agent/data/sample/: sample_cases.jsonl
zt411-troubleshooter-agent/docs/phase4/: snmp_set_findings.md
zt411-troubleshooter-agent/eval/: __init__.py  run_eval.py  synth_cases.py
zt411-troubleshooter-agent/eval/results/: eval_20260429-235110.csv  eval_20260429-235338.csv  eval_20260430-005616.csv
zt411-troubleshooter-agent/reports/: eval.json  train_history.json
zt411-troubleshooter-agent/scripts/: SESSION_B6_RUN_INSTRUCTIONS.md  build_offline_cache.py  gen_synth_data.py  session_b6_live_loop.py  smoke_windows_specialist.py  verify_snmp_set.py
zt411-troubleshooter-agent/service/: app.py
zt411-troubleshooter-agent/service/static/: index.html  style.css
zt411-troubleshooter-agent/src/zt411_agent/: cost_tracking.py  eval.py  inference.py  logging_utils.py  metrics.py  planner.py  settings.py  state.py  train.py
zt411-troubleshooter-agent/tests/: test_agent_loop.py  test_agent_loop_pause_fixture.py  test_calibrate_action_full_loop.py  test_cost_tracking.py  test_data.py  test_device_specialist_fixture_replay.py  test_integration.py  test_model.py  test_orchestrator_pause_resume.py  test_planner.py  test_rag.py  test_service_smoke.py  test_validation_specialist.py  test_zpl_host_status.py
zt411-troubleshooter-agent/tests/e2e/: validate-config.test.ts
zt411-troubleshooter-agent/tests/fixtures/: replay.py
zt411-troubleshooter-agent/tests/integration/: config.test.ts
(+83 files in other folders)
