[tool.poetry]
name = "zt411-troubleshooter-agent"
version = "0.1.0"
description = "Agentic AI troubleshooting system for Zebra ZT411 printers"
authors = ["Dylan Figueredo"]
license = "MIT"
packages = [{ include = "zt411_agent", from = "zt411-troubleshooter-agent/src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.110,<1.0"
uvicorn = {version = ">=0.29", extras = ["standard"]}
pydantic = ">=2.6,<3.0"
sqlmodel = ">=0.0.16,<1.0"
sqlalchemy = ">=2.0,<3.0"
psycopg2-binary = ">=2.9,<3.0"
alembic = ">=1.13,<2.0"
redis = ">=5.0,<6.0"
rq = ">=1.15,<2.0"
sentence-transformers = ">=2.6,<4.0"
faiss-cpu = ">=1.8,<2.0"
mlflow = ">=2.12,<3.0"
httpx = ">=0.27,<1.0"
pyyaml = ">=6.0,<7.0"
prometheus-client = ">=0.20,<1.0"
scikit-learn = ">=1.4,<2.0"
numpy = ">=1.26,<3.0"
pandas = ">=2.2,<3.0"
pymupdf = ">=1.26,<2.0"
"pdfminer.six" = ">=20251228,<20260107"
pysnmp = ">=7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
ruff = ">=0.3"
black = ">=24.3"
isort = ">=5.13"
pre-commit = ">=3.6"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
